--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@angular/common": "~11.0.6",
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.6",
+    "@angular/localize": "~11.0.6",
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.2",
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^4.5.3",
+    "firebase": "^8.2.2",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
